story(ccls-2026): add evidence document endpoints
