# caab-api/open-api-specification.yml
@@ -17,7 +17,7 @@ paths:
             type: 'string'
             example: '1234567890'
         - name: 'provider-id'
-          in: query
+          in: 'query'
           schema:
             type: 'string'
             example: '1234567890'
@@ -164,7 +164,7 @@ paths:
   /applications/clients/{client-reference-id}:
     patch:
       tags:
-          - clients
+          - applications
       summary: 'Update a client for all applications with matching client reference id'
       operationId: 'updateApplicationClient'
       requestBody:
@@ -460,7 +460,6 @@ paths:
     get:
       tags:
         - applications
-        - linked cases
       summary: 'Get an application''s linked cases'
       operationId: 'getApplicationLinkedCases'
       parameters:
@@ -491,7 +490,6 @@ paths:
     post:
       tags:
         - applications
-        - linked cases
       summary: 'Add a linked case to an application'
       operationId: 'addApplicationLinkedCase'
       parameters:
@@ -592,7 +590,7 @@ paths:
   /applications/{id}/proceedings:
     get:
       tags:
-        - proceedings
+        - applications
       summary: 'Get an application''s proceedings'
       operationId: 'getApplicationProceedings'
       parameters:
@@ -622,7 +620,7 @@ paths:
           description: 'Internal server error'
     post:
       tags:
-        - proceedings
+        - applications
       summary: 'Add a proceeding to an application'
       operationId: 'addApplicationProceeding'
       parameters:
@@ -723,7 +721,7 @@ paths:
   /proceedings/{proceeding-id}/scope-limitations:
     get:
       tags:
-        - scope limitations
+        - proceedings
       summary: 'Get a proceeding''s scope limitations'
       operationId: 'getProceedingsScopeLimitations'
       parameters:
@@ -753,7 +751,7 @@ paths:
           description: 'Internal server error'
     post:
       tags:
-        - scope limitations
+        - proceedings
       summary: 'Add a scope limitations to an proceeding'
       operationId: 'addProceedingScopeLimitation'
       parameters:
@@ -854,7 +852,7 @@ paths:
   /applications/{id}/prior-authorities:
     get:
       tags:
-        - prior authorities
+        - applications
       summary: 'Get an application''s prior authorities'
       operationId: 'getApplicationPriorAuthorities'
       parameters:
@@ -884,7 +882,7 @@ paths:
           description: 'Internal server error'
     post:
       tags:
-        - prior authorities
+        - applications
       summary: 'Add a prior authority to an application'
       operationId: 'addApplicationPriorAuthority'
       parameters:
@@ -986,7 +984,7 @@ paths:
   /applications/{id}/opponents:
     get:
       tags:
-        - opponents
+        - applications
       summary: 'Get an application''s opponents'
       operationId: 'getApplicationOpponents'
       parameters:
@@ -1016,7 +1014,7 @@ paths:
           description: 'Internal server error'
     post:
       tags:
-        - opponents
+        - applications
       summary: 'Add an opponent to an application'
       operationId: 'addApplicationOpponent'
       parameters:
@@ -1114,7 +1112,146 @@ paths:
           description: 'Not found'
         '500':
           description: 'Internal server error'
-
+  /evidence:
+    get:
+      tags:
+        - evidence
+      summary: 'Get Evidence Documents'
+      operationId: 'getEvidenceDocuments'
+      x-spring-paginated: true
+      parameters:
+        - name: 'application-or-outcome-id'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: '1234567890'
+        - name: 'case-reference-number'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: '1234567890'
+        - name: 'provider-id'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: '1234567890'
+        - name: 'document-type'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'type'
+        - name: 'transfer-status'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'status'
+        - name: 'ccms-module'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'module'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/evidenceDocumentDetails"
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
+    post:
+      tags:
+        - evidence
+      summary: 'Create Evidence Document'
+      operationId: 'createEvidenceDocument'
+      requestBody:
+        description: Create Evidence Document
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/evidenceDocumentDetail'
+      parameters:
+        - name: 'Caab-User-Login-Id'
+          in: header
+          required: true
+          schema:
+            type: 'string'
+          example: 'SOMEUSER@COMPANY.CO.UK'
+      responses:
+        '200':
+          description: 'Successful operation'
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
+  /evidence/{evidence-document-id}:
+    get:
+      tags:
+        - evidence
+      summary: 'Get Evidence Document'
+      operationId: 'getEvidenceDocument'
+      parameters:
+        - name: 'evidence-document-id'
+          in: 'path'
+          required: true
+          schema:
+            type: 'integer'
+            format: 'int64'
+            example: '1234567890'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/evidenceDocumentDetail"
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
+    delete:
+      tags:
+        - evidence
+      summary: 'Remove an evidence document'
+      operationId: 'removeEvidenceDocument'
+      parameters:
+        - name: 'evidence-document-id'
+          in: 'path'
+          required: true
+          schema:
+            type: 'integer'
+            format: 'int64'
+        - name: 'Caab-User-Login-Id'
+          in: header
+          required: true
+          schema:
+            type: 'string'
+          example: 'SOMEUSER@COMPANY.CO.UK'
+      responses:
+        '204':
+          description: 'No Content'
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
 components:
   schemas:
     intDisplayValue:
@@ -2041,6 +2178,58 @@ components:
           $ref: "#/components/schemas/stringDisplayValue"
         provider_case_reference:
           type: 'string'
+    evidenceDocumentDetails:
+      allOf:
+        - $ref: "#/components/schemas/page"
+      type: 'object'
+      properties:
+        content:
+          type: 'array'
+          default: []
+          items:
+            $ref: '#/components/schemas/evidenceDocumentDetail'
+    evidenceDocumentDetail:
+      type: 'object'
+      properties:
+        id:
+          type: 'integer'
+        application_or_outcome_id:
+          type: 'string'
+        case_reference_number:
+          type: 'string'
+        provider_id:
+          type: 'string'
+        document_type:
+          $ref: '#/components/schemas/stringDisplayValue'
+        description:
+          type: 'string'
+        registered_document_id:
+          type: 'string'
+        document_sender:
+          type: 'string'
+        transfer_status:
+          type: 'string'
+        file_name:
+          type: 'string'
+        file_extension:
+          type: 'string'
+        file_data:
+          type: 'string'
+        evidence_descriptions:
+          type: 'string'
+        transfer_retry_count:
+          type: 'integer'
+        transfer_response_code:
+          type: 'string'
+        transfer_response_description:
+          type: 'string'
+        ccms_module:
+          type: 'string'
+        notification_reference:
+          type: 'string'
+        audit_trail:
+          $ref: '#/components/schemas/auditDetail'
+
     auditDetail:
       type: 'object'
       properties:
